--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -753,8 +753,81 @@ code {
   font-family: 'Dosis' !important;
   text-transform: uppercase;
   font-weight: 800;
-  text-decoration: none;
   font-size: 14px;
+  padding-left: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 25px;
+  text-decoration: none !important;
+}
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #039b36;
+  --bs-btn-border-color: #039b36;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1f73cc;
+  --bs-btn-hover-border-color: #1f73cc;
+  --bs-btn-focus-shadow-rgb: 60, 153, 110;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #1f73cc;
+  --bs-btn-active-border-color: #1f73cc;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #039b36c0;
+  --bs-btn-disabled-border-color: #039b36c0;
+}
+
+.btn-transprimary {
+  --bs-btn-color: #039b36;
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #1f73cc;
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 60, 153, 110;
+  --bs-btn-active-color: #1f73cc;
+  --bs-btn-active-bg: transparent;
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #c0c0c0;
+}
+
+.btn-trans2primary {
+  --bs-btn-color: #039b36;
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1f73cc;
+  --bs-btn-hover-border-color: #1f73cc;
+  --bs-btn-focus-shadow-rgb: 60, 153, 110;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #1f73cc;
+  --bs-btn-active-border-color: #1f73cc;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #1f73ccc0;
+  --bs-btn-disabled-border-color: #1f73ccc0;
+}
+
+.btn-invprimary {
+  text-decoration: none !important;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #1f73cc;
+  --bs-btn-border-color: #1f73cc;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #039b36;
+  --bs-btn-hover-border-color: #039b36;
+  --bs-btn-focus-shadow-rgb: 60, 153, 110;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #039b36;
+  --bs-btn-active-border-color: #039b36;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #1f73ccc0;
+  --bs-btn-disabled-border-color: #1f73ccc0;
 }
 
 @media (max-width: 991px) {
@@ -870,16 +943,6 @@ code {
   background-color: #039b36 !important;
 }
 
-.btn-primary {
-  background-color: #039b36 !important;
-  border-color: #039b36 !important;
-  font-family: 'Dosis' !important;
-  text-transform: uppercase;
-  font-weight: 800;
-  text-decoration: none;
-  font-size: 14px;
-}
-
 .bg-pattern-icosia {
   background-image: linear-gradient(to right, #039b3650, #007bff50);
 }
@@ -909,6 +972,14 @@ code {
   font-family: "Merriweather Sans";
 }
 
+/* satellite events */
+.event-img {
+  height: auto;
+  width: 100%;
+  border: 1px solid #e5e5e5;
+  border-radius: .5rem;
+}
+
 p {
   font-family: 'Merriweather Sans';
   font-weight: 300;
@@ -934,7 +1005,7 @@ a:hover {
   text-decoration: underline;
 }
 
-footer p {
+.credit {
   font-size: 9pt;
 }
 
